Pause/continue buttons switch